# hyperskill-sdk

./: README.md
youtrack/: pyproject.toml
youtrack/youtrack/: client.py
youtrack/youtrack/models/: activity.py  comment.py  common.py  issue.py  user.py
